Time: 3 ms (83.29%), Space: 47.3 MB (70.25%) - LeetHub